@@ -60,7 +60,6 @@ Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-settings-daem
 # to the first version that did so
 Package: gnome-settings-daemon
 Architecture: any
-Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libpam-systemd [!hurd-any !kfreebsd-any],
@@ -71,11 +70,11 @@ Recommends: pulseaudio,
 Breaks: afterstep (<< 2.2.12-10.1~),
         budgie-core (<< 10.4~),
         cairo-dock (<< 3.4.1-1.1~),
-        gdm3 (<< 3.24),
+        gdm3 (<< 3.27),
         gnome-control-center (<< 1:3.25.91),
-        gnome-initial-setup (<< 3.24),
-        gnome-session (<< 3.25.4),
-        gnome-session-flashback (<< 3.24),
+        gnome-initial-setup (<< 3.27),
+        gnome-session (<< 3.27),
+        gnome-session-flashback (<< 3.27),
         gnome-shell (<< 3.25.91),
         gnome-shell-extensions (<< 3.22.2-2~),
         openbox-gnome-session (<< 3.6.1-4.1~),
