@@ -2,3 +2,4 @@ rm_conffile /etc/dbus-1/system.d/org.gnome.SettingsDaemon.DateTimeMechanism.conf
 rm_conffile /etc/xdg/autostart/gnome-settings-daemon.desktop 3.24.2-1~ gnome-settings-daemon
 rm_conffile /etc/xdg/autostart/org.gnome.SettingsDaemon.XRANDR.desktop 3.25.92-1~ gnome-settings-daemon
 rm_conffile /etc/xdg/autostart/org.gnome.SettingsDaemon.Orientation.desktop 3.25.92-1~ gnome-settings-daemon
+rm_conffile /etc/xdg/autostart/org.gnome.SettingsDaemon.A11yKeyboard.desktop 3.27.90-1~ gnome-settings-daemon
