@@ -2,6 +2,8 @@ gnome-settings-daemon (3.27.91-1) UNRELEASED; urgency=medium
 
   * New upstream development release
   * Build with meson
+  * A11yKeyboard plugin has been dropped, update some of the Breaks
+    for this
 
  -- Jeremy Bicha <jbicha@debian.org>  Mon, 19 Feb 2018 14:06:36 -0500
 
